--- a/GS Agency/about.html
+++ b/GS Agency/about.html
@@ -43,6 +43,8 @@
     </div>
     <!-- Preloader End -->
 
+    <div class="cursor cursor-dot"></div>
+
     <!-- Header Start -->
     <header class="position-absolute w-100">
       <div class="topbar">
@@ -79,7 +81,7 @@
       <nav id="active-sticky" class="navbar navbar-light navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="index.html"
-            ><img src="assets/img/logo.png" alt="Optimi"
+            ><img src="assets/img/logo.svg" alt="GS Agency"
           /></a>
           <button
             class="navbar-toggler navber-toggler-right"
@@ -134,7 +136,7 @@
         <div class="row d-flex align-items-center flex-wrap flex-lg-nowrap">
           <div class="col-12 col-lg-6 mb-sm-30 mb-md-30" data-aos="fade-right">
             <div class="hero-thumb text-left text-lg-center">
-              <img src="assets/img/hero/1.png" alt="Hero Thumbnail" />
+              <img src="assets/img/hero/6.svg" alt="Hero Thumbnail" />
             </div>
           </div>
           <div class="col-12 col-lg-6" data-aos="fade-left">
@@ -185,7 +187,7 @@
           </div>
           <div class="col-12 col-lg-6 align-self-end" data-aos="fade-left">
             <div class="hero-thumb text-left text-lg-right">
-              <img src="assets/img/hero/3.png" alt="Hero Thumbnail" />
+              <img src="assets/img/hero/3.svg" alt="Hero Thumbnail" />
             </div>
           </div>
         </div>
@@ -207,28 +209,28 @@
             <div class="process-boxs d-flex d-row">
               <div class="circle-box align-self-center">
                 <img
-                  src="assets/img/process/1.png"
+                  src="assets/img/process/1.svg"
                   alt="Icon Image"
                   data-aos="zoom-in"
                   data-aos-delay="100"
                 />
-                <h3 class="mb-0 mt-25 pl-20 text-warning">01. Аналіз ринку</h3>
+                <h3 class="mb-0 mt-25 pl-20">01. Аналіз ринку</h3>
               </div>
               <div
                 class="circle-box align-self-start"
                 data-aos="zoom-in"
                 data-aos-delay="300"
               >
-                <img src="assets/img/process/2.png" alt="Icon Image" />
-                <h3 class="mb-0 mt-5 text-secondary">02. Розробка продукту</h3>
+                <img src="assets/img/process/2.svg" alt="Icon Image" />
+                <h3 class="mb-0 mt-5">02. Розробка продукту</h3>
               </div>
               <div
                 class="circle-box align-self-end"
                 data-aos="zoom-in"
                 data-aos-delay="500"
               >
-                <img src="assets/img/process/3.png" alt="Icon Image" />
-                <h3 class="mb-0 mt-25 pl-20 text-primary">
+                <img src="assets/img/process/3.svg" alt="Icon Image" />
+                <h3 class="mb-0 mt-25 pl-20">
                   03. Налаштування реклами
                 </h3>
               </div>
@@ -237,7 +239,7 @@
                 data-aos="zoom-in"
                 data-aos-delay="700"
               >
-                <img src="assets/img/process/4.png" alt="Icon Image" />
+                <img src="assets/img/process/4.svg" alt="Icon Image" />
                 <h3 class="mb-0 mt-25 text-center">04. Результат</h3>
               </div>
             </div>
@@ -256,7 +258,7 @@
             data-aos-delay="200"
           >
             <div class="single-fact">
-              <img src="assets/img/icons/12.png" alt="Fact Icon" />
+              <img src="assets/img/icons/genered-lids.svg" alt="Fact Icon" />
               <h1 class="text-white mb-0 mt-20">
                 <span class="counter">20000</span>
               </h1>
@@ -270,7 +272,7 @@
             data-aos-delay="300"
           >
             <div class="single-fact">
-              <img src="assets/img/icons/13.png" alt="Fact Icon" />
+              <img src="assets/img/icons/reklum.svg" alt="Fact Icon" />
               <h1 class="text-white mb-0 mt-20">
                 <span class="counter">100</span>
               </h1>
@@ -284,7 +286,7 @@
             data-aos-delay="400"
           >
             <div class="single-fact">
-              <img src="assets/img/icons/14.png" alt="Fact Icon" />
+              <img src="assets/img/icons/five_workers.svg" alt="Fact Icon" />
               <h1 class="text-white mb-0 mt-20">
                 <span class="counter">5</span>
               </h1>
@@ -298,7 +300,7 @@
             data-aos-delay="500"
           >
             <div class="single-fact">
-              <img src="assets/img/icons/15.png" alt="Fact Icon" />
+              <img src="assets/img/icons/years.svg" alt="Fact Icon" />
               <h1 class="text-white mb-0 mt-20">
                 <span class="counter">3</span>
               </h1>
