--- a/GS Agency/case-study.html
+++ b/GS Agency/case-study.html
@@ -43,6 +43,8 @@
     </div>
     <!-- Preloader End -->
 
+    <div class="cursor cursor-dot"></div>
+
     <!-- Header Start -->
     <header class="position-absolute w-100">
       <div class="topbar">
@@ -79,7 +81,7 @@
       <nav id="active-sticky" class="navbar navbar-light navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="index.html"
-            ><img src="assets/img/logo.png" alt="Optimi"
+            ><img src="assets/img/logo.svg" alt="GS Agency"
           /></a>
           <button
             class="navbar-toggler navber-toggler-right"
@@ -140,13 +142,13 @@
             <div class="single-case bg-white">
               <div class="case-thumb">
                 <a href="case-study-details.html"
-                  ><img src="assets/img/case/1.jpg" alt="Thumbnail"
+                  ><img src="assets/img/case/1.svg" alt="Thumbnail"
                 /></a>
               </div>
               <div class="case-title ptb-20 pl-20">
-                <span class="badge badge-dark mb-10">Agency</span>
+                <span class="badge badge-dark mb-10">Таргетована реклама</span>
                 <h4 class="mb-0">
-                  <a href="case-study-details.html">Digital Marketing</a>
+                  <a href="case-study-details.html">ЖАДОР</a>
                 </h4>
               </div>
             </div>
@@ -160,13 +162,13 @@
             <div class="single-case bg-white">
               <div class="case-thumb">
                 <a href="case-study-details.html"
-                  ><img src="assets/img/case/2.jpg" alt="Thumbnail"
+                  ><img src="assets/img/case/2.svg" alt="Thumbnail"
                 /></a>
               </div>
               <div class="case-title ptb-20 pl-20">
-                <span class="badge badge-dark mb-10">Consulting</span>
+                <span class="badge badge-dark mb-10">Landing Page + реклама</span>
                 <h4 class="mb-0">
-                  <a href="case-study-details.html">Consulting Persone</a>
+                  <a href="case-study-details.html">CONSULT APARTMENTS</a>
                 </h4>
               </div>
             </div>
@@ -180,13 +182,13 @@
             <div class="single-case bg-white">
               <div class="case-thumb">
                 <a href="case-study-details.html"
-                  ><img src="assets/img/case/3.jpg" alt="Thumbnail"
+                  ><img src="assets/img/case/3.svg" alt="Thumbnail"
                 /></a>
               </div>
               <div class="case-title ptb-20 pl-20">
-                <span class="badge badge-dark mb-10">Network</span>
+                <span class="badge badge-dark mb-10">SMM + реклама</span>
                 <h4 class="mb-0">
-                  <a href="case-study-details.html">Social Networks</a>
+                  <a href="case-study-details.html">YOLLA</a>
                 </h4>
               </div>
             </div>
@@ -200,13 +202,13 @@
             <div class="single-case bg-white">
               <div class="case-thumb">
                 <a href="case-study-details.html"
-                  ><img src="assets/img/case/4.jpg" alt="Thumbnail"
+                  ><img src="assets/img/case/4.svg" alt="Thumbnail"
                 /></a>
               </div>
               <div class="case-title ptb-20 pl-20">
-                <span class="badge badge-dark mb-10">Design</span>
+                <span class="badge badge-dark mb-10">Інтернет-магазин</span>
                 <h4 class="mb-0">
-                  <a href="case-study-details.html">Hezul Portfolio PSD</a>
+                  <a href="case-study-details.html">Stock magazine</a>
                 </h4>
               </div>
             </div>
@@ -220,104 +222,18 @@
             <div class="single-case bg-white">
               <div class="case-thumb">
                 <a href="case-study-details.html"
-                  ><img src="assets/img/case/5.jpg" alt="Thumbnail"
+                  ><img src="assets/img/case/5.svg" alt="Thumbnail"
                 /></a>
               </div>
               <div class="case-title ptb-20 pl-20">
-                <span class="badge badge-dark mb-10">Develop</span>
+                <span class="badge badge-dark mb-10">Розробка сайту (Angular+Java)</span>
                 <h4 class="mb-0">
-                  <a href="case-study-details.html">Web Programming</a>
+                  <a href="case-study-details.html">HOTEL PALMA</a>
                 </h4>
               </div>
             </div>
           </div>
-          <!-- Single Case End -->
-          <div
-            class="col-12 col-sm-6 col-md-4 col-lg-3"
-            data-aos="zoom-in"
-            data-aos-delay="300"
-          >
-            <div class="single-case bg-white">
-              <div class="case-thumb">
-                <a href="case-study-details.html"
-                  ><img src="assets/img/case/6.jpg" alt="Thumbnail"
-                /></a>
-              </div>
-              <div class="case-title ptb-20 pl-20">
-                <span class="badge badge-dark mb-10">Powerpoint</span>
-                <h4 class="mb-0">
-                  <a href="case-study-details.html">Web presentation</a>
-                </h4>
-              </div>
-            </div>
-          </div>
-          <!-- Single Case End -->
-          <div
-            class="col-12 col-sm-6 col-md-4 col-lg-3"
-            data-aos="zoom-in"
-            data-aos-delay="400"
-          >
-            <div class="single-case bg-white">
-              <div class="case-thumb">
-                <a href="case-study-details.html"
-                  ><img src="assets/img/case/7.jpg" alt="Thumbnail"
-                /></a>
-              </div>
-              <div class="case-title ptb-20 pl-20">
-                <span class="badge badge-dark mb-10">Web App</span>
-                <h4 class="mb-0">
-                  <a href="case-study-details.html">App Development</a>
-                </h4>
-              </div>
-            </div>
-          </div>
-          <!-- Single Case End -->
-          <div
-            class="col-12 col-sm-6 col-md-4 col-lg-3"
-            data-aos="zoom-in"
-            data-aos-delay="500"
-          >
-            <div class="single-case bg-white">
-              <div class="case-thumb">
-                <a href="case-study-details.html"
-                  ><img src="assets/img/case/8.jpg" alt="Thumbnail"
-                /></a>
-              </div>
-              <div class="case-title ptb-20 pl-20">
-                <span class="badge badge-dark mb-10">Deshboard</span>
-                <h4 class="mb-0">
-                  <a href="case-study-details.html">Deshboard Control</a>
-                </h4>
-              </div>
-            </div>
-          </div>
-          <!-- Single Case End -->
         </div>
-        <!--Pagination Start -->
-        <div class="mt-30 custom text-center">
-          <nav>
-            <ul class="pagination justify-content-center">
-              <li class="page-item disabled">
-                <span class="page-link"><i class="fa fa-angle-left"></i></span>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="#!">01</a>
-              </li>
-              <li class="page-item active">
-                <span class="page-link">02</span>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="#!">03</a>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="#!"
-                  ><i class="fa fa-angle-right"></i
-                ></a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <!--Pagination End -->
       </div>
     </div>
     <!-- Case Study End -->
