--- a/GS Agency/index.html
+++ b/GS Agency/index.html
@@ -39,7 +39,9 @@
       </div>
     </div>
     <!-- Preloader End -->
-
+    <!-- <div class="cursor cursor-shadow"></div> -->
+    <div class="cursor cursor-dot"></div>
+ 
     <!-- particles.js container -->
     <div id="particles-js"></div>
     <!-- stats - count particles -->
@@ -83,7 +85,7 @@
       <nav id="active-sticky" class="navbar navbar-light navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="index.html"
-            ><img src="assets/img/logo.png" alt="Optimi"
+            ><img src="assets/img/logo.svg" alt="GS Agency"
           /></a>
           <button
             class="navbar-toggler navber-toggler-right"
@@ -119,7 +121,7 @@
     </header>
     <!-- Header End -->
     <!-- Slider Section Start -->
-    <div class="slider-area h-100 h-sm-auto bg-1">
+    <div class="slider-area h-100 h-sm-auto">
       <div
         class="container h-100 h-sm-auto d-flex flex-row align-items-center flex-wrap flex-md-nowrap"
       >
@@ -140,7 +142,7 @@
           class="image-layer ml-md-auto align-self-md-center align-self-start"
           data-aos="fade-left"
         >
-          <img src="assets/img/slider/layer/1.png" alt="Layer Image" />
+          <img src="assets/img/slider/layer/1.svg" alt="Layer Image" />
         </div>
       </div>
     </div>
@@ -153,7 +155,7 @@
         >
           <div class="mx-auto text-center">
             <h1 class="text-white mb-40">
-              Скільки клієнтів ми можемо привести у Ваш бізнес?
+              Скільки клієнтів ми можемо <br> привести у Ваш бізнес?
             </h1>
             <form class="form-inline" action="#">
               <input class="form-control" type="text" placeholder="Ім’я" />
@@ -180,7 +182,7 @@
           >
             <div class="icon-block">
               <div class="icon mb-20">
-                <img src="assets/img/icons/1.png" alt="Icon" />
+                <img src="assets/img/icons/1.svg" alt="Icon" />
               </div>
               <h3>Веб-сайт який продає</h3>
               <p>
@@ -200,7 +202,7 @@
           >
             <div class="icon-block">
               <div class="icon mb-20">
-                <img src="assets/img/icons/2.png" alt="Icon" />
+                <img src="assets/img/icons/2.svg" alt="Icon" />
               </div>
               <h3>Ефективна реклама</h3>
               <p>Розгортаємо рекламні кампанії у Google, Facebook, Instagram</p>
@@ -216,7 +218,7 @@
           >
             <div class="icon-block">
               <div class="icon mb-20">
-                <img src="assets/img/icons/3.png" alt="Icon" />
+                <img src="assets/img/icons/3.svg" alt="Icon" />
               </div>
               <h3>Результат</h3>
               <p>
@@ -254,7 +256,7 @@
           </div>
           <div class="col-12 col-md-6" data-aos="fade-left">
             <div class="hero-thumb text-left text-lg-right">
-              <img src="assets/img/hero/1.png" alt="Hero Thumbnail" />
+              <img src="assets/img/hero/1.svg" alt="Hero Thumbnail" />
             </div>
           </div>
         </div>
@@ -279,15 +281,15 @@
             data-aos="zoom-in"
             data-aos-delay="200"
           >
-            <div class="card ptb-60 bg-blue">
+            <div class="card ptb-60 bg-one">
               <div class="icon-block">
                 <div class="icon mb-20">
-                  <img src="assets/img/icons/1.png" alt="Icon" />
+                  <img src="assets/img/icons/landing_marketing.svg" alt="Icon" />
                 </div>
-                <h3 class="text-white">Landing Page + реклама</h3>
-                <p class="text-white mb-35">
+                <h3 class="text-black">Landing Page + реклама</h3>
+                <p class="text-black mb-35">
                   Адаптивний дизайн. Правильне подання. Ефективна реклама та
-                  аналітика. Швидкий старт продажу.
+                  аналітика.
                 </p>
                 <button class="btn  btn-outline-light btn-sm">
                   Детальніше
@@ -301,13 +303,13 @@
             data-aos="zoom-in"
             data-aos-delay="400"
           >
-            <div class="card ptb-60 bg-dark bg-3">
+            <div class="card ptb-60 bg-two">
               <div class="icon-block">
                 <div class="icon mb-20">
-                  <img src="assets/img/icons/2.png" alt="Icon" />
+                  <img src="assets/img/icons/shop_marketing.svg" alt="Icon" />
                 </div>
-                <h3 class="text-white">Інтернет-магазин + реклама</h3>
-                <p class="text-white mb-35">
+                <h3 class="text-black">Інтернет-магазин + реклама</h3>
+                <p class="text-black mb-35">
                   Інтернет-магазин, який продає. Цільовий трафік з пошукових та
                   соціальних мереж
                 </p>
@@ -319,13 +321,13 @@
           </div>
           <!-- Single Service End -->
           <div class="col-md-4" data-aos="zoom-in" data-aos-delay="600">
-            <div class="card ptb-60 bg-secondary">
+            <div class="card ptb-60 bg-three">
               <div class="icon-block">
                 <div class="icon mb-20">
-                  <img src="assets/img/icons/3.png" alt="Icon" />
+                  <img src="assets/img/icons/smm_marketing.svg" alt="Icon" />
                 </div>
-                <h3 class="text-white">SMM + реклама</h3>
-                <p class="text-white mb-35">
+                <h3 class="text-black">SMM + реклама</h3>
+                <p class="text-black mb-35">
                   Просування бізнесу в Facebook&Instagram. Таргетована і
                   контекстна реклама.
                 </p>
@@ -368,25 +370,25 @@
                 data-aos="zoom-in"
                 data-aos-delay="100"
               >
-                <img src="assets/img/process/1.png" alt="Icon Image" />
-                <h3 class="mb-0 mt-25 pl-20 text-warning">01. Аналіз ринку</h3>
+                <img src="assets/img/process/1.svg" alt="Icon Image" />
+                <h3 class="mb-0 mt-25 pl-20">01. Аналіз <br> ринку</h3>
               </div>
               <div
                 class="circle-box align-self-start"
                 data-aos="zoom-in"
                 data-aos-delay="300"
               >
-                <img src="assets/img/process/2.png" alt="Icon Image" />
-                <h3 class="mb-0 mt-5 text-secondary">02. Розробка продукту</h3>
+                <img src="assets/img/process/2.svg" alt="Icon Image" />
+                <h3 class="mb-0 mt-5">02. Розробка <br> продукту</h3>
               </div>
               <div
                 class="circle-box align-self-end"
                 data-aos="zoom-in"
                 data-aos-delay="500"
               >
-                <img src="assets/img/process/3.png" alt="Icon Image" />
-                <h3 class="mb-0 mt-25 pl-20 text-primary">
-                  03. Налаштування реклами
+                <img src="assets/img/process/3.svg" alt="Icon Image" />
+                <h3 class="mb-0 mt-25 pl-20">
+                  03. Налаштування <br> реклами
                 </h3>
               </div>
               <div
@@ -394,7 +396,7 @@
                 data-aos="zoom-in"
                 data-aos-delay="700"
               >
-                <img src="assets/img/process/4.png" alt="Icon Image" />
+                <img src="assets/img/process/4.svg" alt="Icon Image" />
                 <h3 class="mb-0 mt-25 text-center">04. Результат</h3>
               </div>
             </div>
@@ -412,11 +414,6 @@
               <h1 class="text-white">
                 Портфоліо <span class="text-primary">/</span> Кейси
               </h1>
-              <!-- <p class="text-white">
-                If you are going to use a passage of Lorem Ipsum, you need to be
-                suthere isn't anything <br class="d-none d-lg-block" />
-                embarrassing hidden in the middle of text. All the Lorem Ipsum
-              </p> -->
             </div>
           </div>
         </div>
@@ -427,7 +424,7 @@
                 <div class="single-case bg-white">
                   <div class="case-thumb">
                     <a href="case-study-details.html"
-                      ><img src="assets/img/case/1.jpg" alt="Thumbnail"
+                      ><img src="assets/img/case/1.svg" alt="Thumbnail"
                     /></a>
                   </div>
                   <div class="case-title ptb-20 pl-20">
@@ -444,7 +441,7 @@
                 <div class="single-case bg-white">
                   <div class="case-thumb">
                     <a href="case-study-details.html"
-                      ><img src="assets/img/case/2.jpg" alt="Thumbnail"
+                      ><img src="assets/img/case/2.svg" alt="Thumbnail"
                     /></a>
                   </div>
                   <div class="case-title ptb-20 pl-20">
@@ -461,7 +458,7 @@
                 <div class="single-case bg-white">
                   <div class="case-thumb">
                     <a href="case-study-details.html"
-                      ><img src="assets/img/case/3.jpg" alt="Thumbnail"
+                      ><img src="assets/img/case/3.svg" alt="Thumbnail"
                     /></a>
                   </div>
                   <div class="case-title ptb-20 pl-20">
@@ -476,13 +473,28 @@
                 <div class="single-case bg-white">
                   <div class="case-thumb">
                     <a href="case-study-details.html"
-                      ><img src="assets/img/case/4.jpg" alt="Thumbnail"
+                      ><img src="assets/img/case/4.svg" alt="Thumbnail"
                     /></a>
                   </div>
                   <div class="case-title ptb-20 pl-20">
                     <span class="badge badge-dark mb-10">Інтернет-магазин</span>
                     <h4 class="mb-0">
                       <a href="case-study-details.html">Stock magazine</a>
+                    </h4>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="single-case bg-white">
+                  <div class="case-thumb">
+                    <a href="case-study-details.html"
+                      ><img src="assets/img/case/5.svg" alt="Thumbnail"
+                    /></a>
+                  </div>
+                  <div class="case-title ptb-20 pl-20">
+                    <span class="badge badge-dark mb-10">Розробка сайту (Angular+Java)</span>
+                    <h4 class="mb-0">
+                      <a href="case-study-details.html">HOTEL PALMA</a>
                     </h4>
                   </div>
                 </div>
@@ -522,7 +534,7 @@
           </div>
           <div class="col-12 col-md-6" data-aos="fade-left">
             <div class="hero-thumb text-left text-md-right">
-              <img src="assets/img/hero/2.png" alt="Hero Thumbnail" />
+              <img src="assets/img/hero/2.svg" alt="Hero Thumbnail" />
             </div>
           </div>
         </div>
