--- a/GS Agency/pricing.html
+++ b/GS Agency/pricing.html
@@ -43,6 +43,8 @@
     </div>
     <!-- Preloader End -->
 
+    <div class="cursor cursor-dot"></div>
+
     <!-- Header Start -->
     <header class="position-absolute w-100">
       <div class="topbar">
@@ -79,7 +81,7 @@
       <nav id="active-sticky" class="navbar navbar-light navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="index.html"
-            ><img src="assets/img/logo.png" alt="Optimi"
+          ><img src="assets/img/logo.svg" alt="GS Agency"
           /></a>
           <button
             class="navbar-toggler navber-toggler-right"
