--- a/GS Agency/services.html
+++ b/GS Agency/services.html
@@ -43,6 +43,8 @@
     </div>
     <!-- Preloader End -->
 
+    <div class="cursor cursor-dot"></div>
+ 
     <!-- Header Start -->
     <header class="position-absolute w-100">
       <div class="topbar">
@@ -79,7 +81,7 @@
       <nav id="active-sticky" class="navbar navbar-light navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="index.html"
-            ><img src="assets/img/logo.png" alt="Optimi"
+          ><img src="assets/img/logo.svg" alt="GS Agency"
           /></a>
           <button
             class="navbar-toggler navber-toggler-right"
@@ -142,7 +144,7 @@
           >
             <div class="icon-block">
               <div class="icon mb-20">
-                <img src="assets/img/icons/4.png" alt="Icon" />
+                <img src="assets/img/icons/landing_marketing.svg" alt="Icon" />
               </div>
               <h3>Landing Page + реклама</h3>
               <p>
@@ -161,7 +163,7 @@
           >
             <div class="icon-block">
               <div class="icon mb-20">
-                <img src="assets/img/icons/5.png" alt="Icon" />
+                <img src="assets/img/icons/shop_marketing.svg" alt="Icon" />
               </div>
               <h3>Інтернет-магазин + реклама</h3>
               <p>
@@ -176,7 +178,7 @@
           <div class="col-12 col-md-4" data-aos="zoom-in" data-aos-delay="400">
             <div class="icon-block">
               <div class="icon mb-20">
-                <img src="assets/img/icons/6.png" alt="Icon" />
+                <img src="assets/img/icons/smm_marketing.svg" alt="Icon" />
               </div>
               <h3>SMM + реклама</h3>
               <p>
@@ -200,7 +202,7 @@
           >
             <div class="icon-block">
               <div class="icon mb-20">
-                <img src="assets/img/icons/7.png" alt="Icon" />
+                <img src="assets/img/icons/business_site.svg" alt="Icon" />
               </div>
               <h3>Розробка сайту для бізнесу</h3>
               <p>
@@ -220,7 +222,7 @@
           >
             <div class="icon-block">
               <div class="icon mb-20">
-                <img src="assets/img/icons/8.png" alt="Icon" />
+                <img src="assets/img/icons/landing_page.svg" alt="Icon" />
               </div>
               <h3>Розробка Landing Page</h3>
               <p>
@@ -236,7 +238,7 @@
           <div class="col-12 col-md-4" data-aos="zoom-in" data-aos-delay="400">
             <div class="icon-block">
               <div class="icon mb-20">
-                <img src="assets/img/icons/9.png" alt="Icon" />
+                <img src="assets/img/icons/shop_magazine.svg" alt="Icon" />
               </div>
               <h3>Розробка інтернет магазину</h3>
               <p>
@@ -261,7 +263,7 @@
           >
             <div class="icon-block">
               <div class="icon mb-20">
-                <img src="assets/img/icons/7.png" alt="Icon" />
+                <img src="assets/img/icons/contecst_marketing.svg" alt="Icon" />
               </div>
               <h3>Контекстна реклама в Google</h3>
               <p>
@@ -280,7 +282,7 @@
           >
             <div class="icon-block">
               <div class="icon mb-20">
-                <img src="assets/img/icons/8.png" alt="Icon" />
+                <img src="assets/img/icons/target_marketing.svg" alt="Icon" />
               </div>
               <h3>Таргетована реклама в Facebook&Instagram</h3>
               <p>
@@ -295,7 +297,7 @@
           <div class="col-12 col-md-4" data-aos="zoom-in" data-aos-delay="400">
             <div class="icon-block">
               <div class="icon mb-20">
-                <img src="assets/img/icons/9.png" alt="Icon" />
+                <img src="assets/img/icons/seo_marketing.svg" alt="Icon" />
               </div>
               <h3>SEO просування</h3>
               <p>
@@ -312,144 +314,6 @@
       </div>
     </div>
     <!-- Icon Blocks End -->
-    <!-- Pricing Plan Start -->
-    <div class="pricing-plan style-1 section-ptb bg-light">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col" data-aos="zoom-in">
-            <div class="heading mb-75">
-              <h1>Pricing <span class="text-primary">Plan</span></h1>
-              <p>
-                If you are going to use a passage of Lorem Ipsum, you need to be
-                suthere isn't anything <br class="d-none d-lg-block" />
-                embarrassing hidden in the middle of text. All the Lorem Ipsum
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div
-            class="col-12 col-md-4"
-            data-aos="fade-left"
-            data-aos-delay="500"
-          >
-            <div class="single-plan mx-auto text-center bg-white pt-40 pb-60">
-              <div class="icon mb-15">
-                <img alt="Icon" src="assets/img/icons/10.png" />
-              </div>
-              <h2>Personal</h2>
-              <div class="price">
-                <h1><sup>$</sup>22<sub>/Mo</sub></h1>
-              </div>
-              <ul class="list-group mb-30 pt-5">
-                <li>Five User</li>
-                <li>Full Customizable</li>
-                <li>Biuld & Publish</li>
-                <li>Free Backup</li>
-              </ul>
-              <button class="btn btn-primary">order now</button>
-            </div>
-          </div>
-          <!-- Single Plan End -->
-          <div class="col-12 col-md-4" data-aos="zoom-in" data-aos-delay="200">
-            <div
-              class="single-plan popular-plan text-center bg-primary bg-3 pt-70 pb-75"
-            >
-              <div class="stiker bg-white">
-                <h5 class="mb-0">Popular Plan</h5>
-              </div>
-              <div class="icon mb-15">
-                <img alt="Icon" src="assets/img/icons/1.png" />
-              </div>
-              <h2 class="text-white">Webmaster</h2>
-              <div class="price">
-                <h1 class="text-white"><sup>$</sup>30<sub>/Mo</sub></h1>
-              </div>
-              <ul class="list-group mb-40 pt-5">
-                <li>Five User</li>
-                <li>Full Customizable</li>
-                <li>Biuld & Publish</li>
-                <li>Free Backup</li>
-              </ul>
-              <button class="btn btn-primary btn-light">order now</button>
-            </div>
-          </div>
-          <!-- Single Plan End -->
-          <div
-            class="col-12 col-md-4"
-            data-aos="fade-right"
-            data-aos-delay="500"
-          >
-            <div class="single-plan mx-auto text-center bg-white pt-40 pb-60">
-              <div class="icon mb-15">
-                <img alt="Icon" src="assets/img/icons/11.png" />
-              </div>
-              <h2>Professional</h2>
-              <div class="price">
-                <h1><sup>$</sup>40<sub>/Mo</sub></h1>
-              </div>
-              <ul class="list-group mb-30 pt-5">
-                <li>Five User</li>
-                <li>Full Customizable</li>
-                <li>Biuld & Publish</li>
-                <li>Free Backup</li>
-              </ul>
-              <button class="btn btn-primary">order now</button>
-            </div>
-          </div>
-          <!-- Single Plan End -->
-        </div>
-      </div>
-    </div>
-    <!-- Pricing Plan End -->
-    <!-- Clients Logo Section Start -->
-    <div class="client-logo section-ptb bg-white">
-      <div class="container text-center" data-aos="fade-up">
-        <div class="row justify-content-around">
-          <div class="col-2">
-            <div class="brand-logo">
-              <a href="#"
-                ><img src="assets/img/client/logo/1.png" alt="Client Logo"
-              /></a>
-            </div>
-          </div>
-          <!-- Single logo -->
-          <div class="col-2">
-            <div class="brand-logo">
-              <a href="#"
-                ><img src="assets/img/client/logo/2.png" alt="Client Logo"
-              /></a>
-            </div>
-          </div>
-          <!-- Single logo -->
-          <div class="col-2">
-            <div class="brand-logo">
-              <a href="#"
-                ><img src="assets/img/client/logo/3.png" alt="Client Logo"
-              /></a>
-            </div>
-          </div>
-          <!-- Single logo -->
-          <div class="col-2">
-            <div class="brand-logo">
-              <a href="#"
-                ><img src="assets/img/client/logo/4.png" alt="Client Logo"
-              /></a>
-            </div>
-          </div>
-          <!-- Single logo -->
-          <div class="col-2">
-            <div class="brand-logo">
-              <a href="#"
-                ><img src="assets/img/client/logo/5.png" alt="Client Logo"
-              /></a>
-            </div>
-          </div>
-          <!-- Single logo -->
-        </div>
-      </div>
-    </div>
-    <!-- Clients Logo Section End -->
     <!-- Promo Box Start -->
     <div class="promo-area promo-2 solid-gredient-2">
       <div class="container" data-aos="zoom-out">
