--- a/c-punks/index.html
+++ b/c-punks/index.html
@@ -110,6 +110,7 @@
         </div>
         <div class="container">
           <div class="content">
+            <!-- HOME -->
             <div class="slider js-slider">
               <div class="slider__inner js-slider__inner"></div>
               <div class="slide js-slide">
@@ -209,7 +210,7 @@
               <div class="slide js-slide">
                 <div class="slider__text js-slider__text">
                   <div class="slider__text-line js-slider__text-line">
-                    <div>
+                    <div class="gallarey-wrapper">
                       <img
                         class="gallarey-image"
                         src="assets/images/vpn.jpg"
@@ -243,7 +244,7 @@
               <div class="slide js-slide">
                 <div class="slider__text js-slider__text">
                   <div class="slider__text-line js-slider__text-line">
-                    <div>
+                    <div class="gallarey-wrapper">
                       <img
                         class="gallarey-image"
                         src="assets/images/workout.jpg"
@@ -277,7 +278,7 @@
               <div class="slide js-slide">
                 <div class="slider__text js-slider__text">
                   <div class="slider__text-line js-slider__text-line">
-                    <div>
+                    <div class="gallarey-wrapper">
                       <img
                         class="gallarey-image"
                         src="assets/images/safefile.png"
@@ -418,6 +419,10 @@
                 </div>
               </nav>
             </div>
+
+
+            <!-- ABOUT US -->
+            
           </div>
         </div>
 
