--- a/c-punks/index.html
+++ b/c-punks/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,44 +11,17 @@
   </head>
 
   <body>
-    <svg
-      version="1.1"
-      xmlns="http://www.w3.org/2000/svg"
-      xmlns:xlink="http://www.w3.org/1999/xlink"
-      x="0px"
-      y="0px"
-      style="display: none;"
-    >
-      <symbol id="wave">
-        <path
-          d="M420,20c21.5-0.4,38.8-2.5,51.1-4.5c13.4-2.2,26.5-5.2,27.3-5.4C514,6.5,518,4.7,528.5,2.7c7.1-1.3,17.9-2.8,31.5-2.7c0,0,0,0,0,0v20H420z"
-        ></path>
-        <path
-          d="M420,20c-21.5-0.4-38.8-2.5-51.1-4.5c-13.4-2.2-26.5-5.2-27.3-5.4C326,6.5,322,4.7,311.5,2.7C304.3,1.4,293.6-0.1,280,0c0,0,0,0,0,0v20H420z"
-        ></path>
-        <path
-          d="M140,20c21.5-0.4,38.8-2.5,51.1-4.5c13.4-2.2,26.5-5.2,27.3-5.4C234,6.5,238,4.7,248.5,2.7c7.1-1.3,17.9-2.8,31.5-2.7c0,0,0,0,0,0v20H140z"
-        ></path>
-        <path
-          d="M140,20c-21.5-0.4-38.8-2.5-51.1-4.5c-13.4-2.2-26.5-5.2-27.3-5.4C46,6.5,42,4.7,31.5,2.7C24.3,1.4,13.6-0.1,0,0c0,0,0,0,0,0l0,20H140z"
-        ></path>
-      </symbol>
-    </svg>
     <div class="box">
-      <h2 class="percent-title">
-        Oi!
-      </h2>
-      <div class="percent">
-        <div class="percentNum" id="count">00</div>
-        <div class="percentB">.</div>
+      <div class="percent-title">
+        <div>
+          Oi!
+        </div>
       </div>
-      <div id="water" class="water">
-        <svg viewBox="0 0 560 20" class="water_wave water_wave_back">
-          <use xlink:href="#wave"></use>
-        </svg>
-        <svg viewBox="0 0 560 20" class="water_wave water_wave_front">
-          <use xlink:href="#wave"></use>
-        </svg>
+      <div class="percent">
+        <div>
+          <div class="percentNum" id="count">00</div>
+          <div class="percentB">.</div>
+        </div>
       </div>
     </div>
 
@@ -81,7 +54,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a class="studio_nav" href="#">
                         <p>Studio.</p>
                         <span>2.</span>
                       </a>
@@ -110,22 +83,23 @@
         </div>
         <div class="container">
           <div class="content">
-            <!-- HOME -->
             <div class="slider js-slider">
-              <div class="slider__inner js-slider__inner"></div>
               <div class="slide js-slide">
                 <div class="slider__text js-slider__text">
                   <div class="slider__text-line js-slider__text-line">
                     <div><span>Take</span></div>
                   </div>
+
                   <div class="slider__text-line js-slider__text-line">
                     <div><h2>Control.</h2></div>
                   </div>
+
                   <div class="slider__text-line js-slider__text-line">
                     <div><span>Your</span></div>
                   </div>
+
                   <div class="slider__text-line js-slider__text-line">
-                    <div><h2>Privacy</h2></div>
+                    <div><h2>Privacy.</h2></div>
                   </div>
                 </div>
               </div>
@@ -311,7 +285,7 @@
                 </div>
               </div>
 
-              <div class="slide js-slide" id="contact-main">
+              <div class="slide js-slide">
                 <div class="wfifty slider__text js-slider__text">
                   <div class="slider__text-line js-slider__text-line">
                     <div>
@@ -419,10 +393,6 @@
                 </div>
               </nav>
             </div>
-
-
-            <!-- ABOUT US -->
-            
           </div>
         </div>
 
@@ -441,7 +411,7 @@
           <div class="hr-wrapper">
             <hr />
           </div>
-          <a href="#">
+          <a class="email" href="#">
             Drop us a line.
           </a>
         </div>
@@ -457,22 +427,18 @@
     type="text/javascript"
     src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
   ></script>
-
   <script
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"
   ></script>
-
   <script
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/three.js/99/three.min.js"
   ></script>
-
   <script
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"
   ></script>
-
   <script
     type="text/javascript"
     src="//code.jquery.com/jquery-1.11.0.min.js"
