--- a/c-punks/index.html
+++ b/c-punks/index.html
@@ -34,9 +34,14 @@
       <div class="container">
         <div class="header-wrapper">
           <div class="toggled-menu">
-            <div class="toggle-button"></div>
             <div class="menu">
               <nav>
+                <div class="toggle-button">
+                  <div class="slise"></div>
+                  <div class="slise"></div>
+                  <div class="slise"></div>
+                </div>
+
                 <div class="part-menu">
                   <a href="#" class="logo">
                     <h2>C-Punks</h2>
@@ -169,23 +174,23 @@
                       </div>
                       <div class="slider__text-line js-slider__text-line">
                         <div>
-                          <h2>
+                          <h3>
                             Secured VPN
-                          </h2>
+                          </h3>
                         </div>
                       </div>
                       <div class="slider__text-line js-slider__text-line">
                         <div>
-                          <h2>
+                          <h3>
                             Workout
-                          </h2>
+                          </h3>
                         </div>
                       </div>
                       <div class="slider__text-line js-slider__text-line">
                         <div>
-                          <h2>
+                          <h3>
                             SafeFile
-                          </h2>
+                          </h3>
                         </div>
                       </div>
                     </div>
@@ -204,25 +209,6 @@
                         />
                         <h2 class="gallarey">Secured VPN</h2>
                       </div>
-                      <!-- <div
-                        class="content-flex slider__text-line js-slider__text-line"
-                      >
-                        <div class="part">
-                          <p class="small">
-                            01
-                          </p>
-                          <p class="small">
-                            —
-                          </p>
-                          <p class="small">
-                            02
-                          </p>
-                        </div>
-                        <p class="small grey">
-                          The best personal workout trainer. Pick a training
-                          program that is perfect for you
-                        </p>
-                      </div> -->
                     </div>
                   </div>
                 </div>
@@ -239,25 +225,6 @@
                         />
                         <h2 class="gallarey">Workout</h2>
                       </div>
-                      <!-- <div
-                        class="content-flex slider__text-line js-slider__text-line"
-                      >
-                        <div class="part">
-                          <p class="small">
-                            02
-                          </p>
-                          <p class="small">
-                            —
-                          </p>
-                          <p class="small">
-                            03
-                          </p>
-                        </div>
-                        <p class="small grey">
-                          The best personal workout trainer. Pick a training
-                          program that is perfect for you
-                        </p>
-                      </div> -->
                     </div>
                   </div>
                 </div>
@@ -274,34 +241,13 @@
                         />
                         <h2 class="gallarey">SafeFile</h2>
                       </div>
-                      <!-- <div
-                        class="content-flex slider__text-line js-slider__text-line"
-                      >
-                        <div class="part">
-                          <p class="small">
-                            03
-                          </p>
-                          <p class="small">
-                            —
-                          </p>
-                          <p class="small">
-                            03
-                          </p>
-                        </div>
-                        <div class="slider__text-line js-slider__text-line">
-                          <p class="small grey">
-                            Easily encrypt your files locally and access them via
-                            your smartphone or tablet - anywhere and anytime
-                          </p>
-                        </div>
-                      </div> -->
                     </div>
                   </div>
                 </div>
 
                 <!-- Slide Seven -->
                 <div class="slide js-slide">
-                  <div class="wfifty slider__text js-slider__text">
+                  <div class="slider__text js-slider__text">
                     <div class="slider__text-line js-slider__text-line">
                       <div>
                         <a href="">
@@ -579,7 +525,6 @@
     <footer>
       <div class="container">
         <div class="contact">
-          <div class="round-wrapper"></div>
           <div class="hr-wrapper">
             <hr />
           </div>
