--- a/DLS/index.html
+++ b/DLS/index.html
@@ -1110,7 +1110,8 @@
         </div>
       </section>
 
-      <div class="question_and_answer">
+      <!-- Question And Answer Section -->
+      <section id="question_and_answer">
         <div class="container">
           <div class="question">
             <p>Как чистить жилет?</p>
@@ -1125,11 +1126,70 @@
             <p>Как быстро я получу жилет?</p>
           </div>
         </div>
-      </div>
+      </section>
+
+      <!-- Gallarey Section -->
+      <section id="gallarey">
+        <div class="container">
+          <div class="gallarey-wrapper">
+            <img
+              src="assets/images/gallarey-1.png"
+              alt="DsL DOG SPORT LIFE Gallarey Image"
+            />
+            <img
+              src="assets/images/gallarey-2.png"
+              alt="DsL DOG SPORT LIFE Gallarey Image"
+            />
+            <img
+              src="assets/images/gallarey-3.png"
+              alt="DsL DOG SPORT LIFE Gallarey Image"
+            />
+            <img
+              src="assets/images/gallarey-4.png"
+              alt="DsL DOG SPORT LIFE Gallarey Image"
+            />
+            <img
+              src="assets/images/gallarey-5.png"
+              alt="DsL DOG SPORT LIFE Gallarey Image"
+            />
+            <img
+              src="assets/images/gallarey-6.png"
+              alt="DsL DOG SPORT LIFE Gallarey Image"
+            />
+            <img
+              src="assets/images/gallarey-7.png"
+              alt="DsL DOG SPORT LIFE Gallarey Image"
+            />
+            <img
+              src="assets/images/gallarey-8.png"
+              alt="DsL DOG SPORT LIFE Gallarey Image"
+            />
+          </div>
+          <p>
+            Показать ещё >
+          </p>
+        </div>
+      </section>
     </main>
 
     <footer>
-      <div class="container"></div>
+      <div class="container">
+        <p>
+          (с) 2020 DogSportLife <br />
+          Политика конфиденциальности
+        </p>
+
+        <div class="visa-card">
+          <img
+            src="assets/images/master-icon.png"
+            alt="DsL DOG SPORT LIFE Master Icon"
+          />
+          <img
+            src="assets/images/visa.png"
+            alt="DsL DOG SPORT LIFE Visa Icon"
+          />
+        </div>
+      </div>
     </footer>
   </body>
 
